# scripts

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER_README.md  Dockerfile  README.md  book_rankings.db  book_rankings_20250820_221418.json  docker-compose.yml  initial_push.sh  push.sh  pyproject.toml  remove_android.sh  restore_reviewdb.sh  sonar-runner  sonar.sh  start_mongodb.sh  start_mysql.sh  start_sonarqube.sh  stop_mysql.sh  tomcat
aws/: elaticbeanstalk.md
book_dashboard/: DOCKER_README.md  Dockerfile  README.md  book_ranking_monitor.py  book_rankings.db  book_rankings_20250821_002648.json  docker-compose.yml  fastapi_dashboard.py  summary_yozm_ai_agent_info.py
book_dashboard/data/: book_rankings.db
chef/: cheat_sheet.md
docker/: docker_registry_cmd.sh
git/: apply_git_ignore.sh  push.sh
golang/: links.md
install/: install_docker.sh  install_golang.sh  install_mariadb_ubuntu.sh  install_mysql-python.sh  install_mysqlclient_for_python.sh  install_pear.sh  install_php_involved.sh  install_powerdns.sh  install_pyenv.sh  install_virtualbox_guest.sh  powerdns_init.sql
py/: README.md  dashboard.py  fastapi_dashboard.py
remove/: remove_mysql_on_mac.sh
secure/: make_certificate_file.sh
ubuntu/: package.md
utils/: dump_pokopoko.ani_list.txt  dump_pokopoko.evt_entireUserReward.txt  dump_to_yaml.py
