[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "schedule>=1.2.2",
    "streamlit>=1.48.1",
    "uvicorn>=0.35.0",
]
